# nexus/backend/crates/nexus-api/src/openapi.rs
@@ -22,11 +22,14 @@ use utoipa::OpenApi;
         crate::routes::datasources::list::list_datasources,
         crate::routes::datasources::get::get_datasource,
         crate::routes::datasources::delete::delete_datasource,
+        crate::routes::datasources::query::query_datasource,
+        crate::routes::datasources::test::test_datasource,
         crate::routes::dashboards::create::create_dashboard,
         crate::routes::dashboards::list::list_dashboards,
         crate::routes::dashboards::get::get_dashboard,
         crate::routes::dashboards::delete::delete_dashboard,
         crate::routes::dashboards::add_panel::add_panel,
+        crate::routes::dashboards::update_panel::update_panel,
         crate::routes::dashboards::delete_panel::delete_panel,
         crate::routes::flows::list::list_flows,
         crate::routes::flows::create::create_flow,
